--- a/public/assets/css/admin-style.css
+++ b/public/assets/css/admin-style.css
@@ -445,10 +445,10 @@ input[type="checkbox"]:not(:disabled).tabbed:focus ~ .lever::after {
 }
 @font-face {
     font-family: Material-Design-Iconic-Font;
-    src: url(../fonts/Material-Design-Iconic-Font.woff2%3Fv=2.2.0)
+    src: url(../fonts/Material-Design-Iconic-Font.woff2)
             format("woff2"),
-        url(../fonts/Material-Design-Iconic-Font.woff%3Fv=2.2.0) format("woff"),
-        url(../fonts/Material-Design-Iconic-Font.ttf%3Fv=2.2.0)
+        url(../fonts/Material-Design-Iconic-Font.woff) format("woff"),
+        url(../fonts/Material-Design-Iconic-Font.ttf)
             format("truetype");
 }
 .zmdi {
