--- a/public/assets/css/home-style.css
+++ b/public/assets/css/home-style.css
@@ -4443,12 +4443,14 @@ blockquote .shape {
 .doctor-details .doctor-left-bar .single-bar {
     margin-bottom: 25px;
     padding-bottom: 25px;
-    border-bottom: 1px solid #eee
+    border-bottom: 1px solid #eee;
+    margin-left:3px;
 }
 
 .doctor-details .doctor-left-bar .single-bar:last-child {
     margin: 0;
     padding: 0;
+    margin-left:3px;
     border: none
 }
 
@@ -4456,20 +4458,25 @@ blockquote .shape {
     font-size: 18px;
     font-weight: 500;
     margin-bottom: 10px;
-    color: #081828
+    color: #081828;
+    margin-left:3px;
 }
 
 .doctor-details .doctor-left-bar .single-bar:last-child {
-    margin-bottom: 0
+    margin-bottom: 0;
+    margin-left:3px;
 }
 
 .doctor-details .doctor-left-bar .single-bar .list {
-    margin-top: 20px
+    margin-top: 20px;
+    margin-left:3px;
+
 }
 
 .doctor-details .doctor-left-bar .single-bar .list li {
     display: block;
-    margin-top: 12px
+    margin-top: 12px;
+    margin-left:3px;
 }
 
 .doctor-details .doctor-left-bar .single-bar .list li a {
@@ -4481,13 +4488,16 @@ blockquote .shape {
 }
 
 .doctor-details .doctor-left-bar .single-bar .opening-hour {
-    margin-top: 20px
+    margin-top: 20px;
+    margin-left:3px;
 }
 
 .doctor-details .doctor-left-bar .single-bar .opening-hour li {
     overflow: hidden;
     color: #888;
+    margin-left:3px;
     margin-bottom: 13px
+
 }
 
 .doctor-details .doctor-left-bar .single-bar .opening-hour li i {
