--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6098,3 +6098,8 @@ ul.summary-list > li:last-child  {
 .activity-desk .album a:last-child{
     margin-right: 0px;
 }
+
+.blog_content{
+	font-size: 16px;
+	color: #444;
+}
